Allow the jlink plugin to infer its options from the standard Application plugin